force-app/main/default/objects/Quote_Settings__c/Quote_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains custom settings and configuration used on quotes, such as pre-defined quote templates used in Conga and Docusign buttons.</description>
    <label>Quote Settings</label>
</CustomObject>