force-app/main/default/objects/Quote_Settings__c/fields/Check_Account_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Account_Credit_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Account Credit Status</label>
    <type>Checkbox</type>
</CustomField>