force-app/main/default/objects/Quote_Settings__c/fields/Check_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Approval_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Approval Status</label>
    <type>Checkbox</type>
</CustomField>