force-app/main/default/objects/Quote_Settings__c/fields/Check_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Check_Contact_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Contact Email</label>
    <type>Checkbox</type>
</CustomField>