force-app/main/default/objects/Quote_Settings__c/fields/Credit_Check_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Threshold__c</fullName>
    <label>Credit Check Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>