force-app/main/default/objects/Quote_Settings__c/fields/Default_Credit_Check_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Credit_Check_Case_Owner__c</fullName>
    <inlineHelpText>Default case owner (User or Queue) Id</inlineHelpText>
    <label>Default Credit Check Case Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>