force-app/main/default/objects/Quote_Settings__c/fields/Default_Credit_Check_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Credit_Check_Record_Type_ID__c</fullName>
    <inlineHelpText>Record Type ID for credit check cases</inlineHelpText>
    <label>Default Credit Check Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>