force-app/main/default/objects/Quote_Settings__c/fields/Default_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Default_Credit_Limit__c</fullName>
    <label>Default Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>