force-app/main/default/objects/Quote_Settings__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is DocuSign issued using live credentials or Demo (Sandbox)?</inlineHelpText>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>