force-app/main/default/objects/Quote_Settings__c/fields/E_Credit_App_Form__c.field-meta.xml
<CustomField>
    <fullName>E_Credit_App_Form__c</fullName>
    <label>(E) Credit App Form</label>
    <length>18</length>
    <type>Text</type>
</CustomField>