force-app/main/default/objects/Quote_Settings__c/fields/E_Credit_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>E_Credit_Form_Template__c</fullName>
    <label>(E) Credit Form Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>