force-app/main/default/objects/Quote_Settings__c/fields/E_Products_Template__c.field-meta.xml
<CustomField>
    <fullName>E_Products_Template__c</fullName>
    <label>(E) Products Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>