force-app/main/default/objects/Quote_Settings__c/fields/F_Products_Template__c.field-meta.xml
<CustomField>
    <fullName>F_Products_Template__c</fullName>
    <label>(F) Products Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>